--- a/index.ipynb
+++ b/index.ipynb
@@ -36,11 +36,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 44  56]\n",
+      " [ 98 128]\n",
+      " [152 200]]\n",
+      "[[ 44  56]\n",
+      " [ 98 128]\n",
+      " [152 200]]\n",
+      "[[ True  True]\n",
+      " [ True  True]\n",
+      " [ True  True]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "import numpy as np\n",
+    "A = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+    "B = np.array ([[1,2],[3,4],[5,6]])\n",
+    "C = np.array([[1,2],[3,4],[5,6]])\n",
+    "print(A.dot(B+C))\n",
+    "print(A.dot(B)+A.dot(C))\n",
+    "X=A.dot(B+C)\n",
+    "Y=A.dot(B)+A.dot(C)\n",
+    "print(X==Y)"
    ]
   },
   {
@@ -53,11 +78,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[193  44]\n",
+      " [437 100]]\n",
+      "[[193  44]\n",
+      " [437 100]]\n",
+      "[[ True  True]\n",
+      " [ True  True]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here "
+    "# Your code here\n",
+    "A = np.array([[1,2],[3,4]])\n",
+    "B = np.array([[5,6],[7,8]])\n",
+    "C = np.array([[9,0],[1,2]])\n",
+    "X = A.dot(B.dot(C))\n",
+    "Y = (A.dot(B)).dot(C)\n",
+    "print (X)\n",
+    "print(Y)\n",
+    "print(X==Y)"
    ]
   },
   {
@@ -70,11 +116,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[19 22]\n",
+      " [43 50]]\n",
+      "[[23 34]\n",
+      " [31 46]]\n",
+      "[[False False]\n",
+      " [False False]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here "
+    "# Your code here \n",
+    "print(A.dot(B))\n",
+    "print(B.dot(A))\n",
+    "print(A.dot(B)==B.dot(A))"
    ]
   },
   {
@@ -88,11 +150,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[32]]\n",
+      "[[32]]\n",
+      "[[ True]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here "
+    "# Your code here \n",
+    "x=np.array([[1],[2],[3]])\n",
+    "y=np.array([[4],[5],[6]])\n",
+    "x_Ty = x.T.dot(y)\n",
+    "y_Tx = y.T.dot(x)\n",
+    "print(x_Ty)\n",
+    "print(y_Tx)\n",
+    "print(x_Ty==y_Tx)"
    ]
   },
   {
@@ -106,11 +185,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[19 43]\n",
+      " [22 50]]\n",
+      "[[19 43]\n",
+      " [22 50]]\n",
+      "[[ True  True]\n",
+      " [ True  True]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here "
+    "# Your code here \n",
+    "X = (A.dot(B)).T\n",
+    "Y = B.T.dot(A.T)\n",
+    "print(X)\n",
+    "print(Y)\n",
+    "print(X==Y)"
    ]
   },
   {
@@ -139,7 +236,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
